Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95770

Cannot open recently saved file

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.15.7, 6.2.1, 6.3.0 Alpha
    • 5.15.5, 6.2.0 Beta4
    • WebEngine
    • None
    • Linux/Other display system, macOS, Windows
    • 2af853bda60156fd320ef59e1b4715c3a61308ae (qt/qtwebengine/dev) d0576dda432b9ef63da0f0dd1451d50a59b397e8 (qt/qtwebengine/5.15) 3fa3ceeb6943c010bf4c9019c777b46e1edb5696 (qt/qtwebengine/6.2)

    Description

      Steps to reproduce:

      Run WebEngine Markdown Editor example
      Save a file
      Try to open it

      Expected: File should be open without any issues
      Actual: File can't be selected

      Tested with Qt 5.15.5 on Windows 10 (MSVC2019 64bit), MacOS Catalina, Linux

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kiburtse Kirill Burtsev
              mateusz_sobal Mateusz Sobal
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes