Fix wrong save file filter for Markdown Editor example

Comma is treated as a part of suffix, and a separator is just a space.

Fixes: QTBUG-95770
Pick-to: 5.15 6.2
Change-Id: I7b27ae98757418c4c09fc92804ecefd6373cbc48
Reviewed-by: Michal Klocek <michal.klocek@qt.io>